tests/compile_fail/private_helper_leak.rs
use ledgerful::impact::packet::serialization::deserialize_score;

fn main() {}
